--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ llama-index-tools-arxiv==0.2.0
 llama-index-tools-database==0.2.0
 llama-index-tools-google==0.2.0
 llama-index-tools-tavily_research==0.2.0
+llama-index-callbacks-arize-phoenix==0.2.1
 pydantic==2.8.2
 retrying==1.3.4
 pymongo==4.6.1
