--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ llama-index-tools-tavily_research==0.2.0
 openinference-instrumentation-llama-index==3.0.2
 opentelemetry-proto==1.16.0
 arize-phoenix-otel==0.5.1
+tokenizers>=0.20
 pydantic==2.9.2
 retrying==1.3.4
 pymongo==4.6.3
