--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ llama-index-tools-google==0.2.0
 llama-index-tools-tavily_research==0.2.0
 tavily-python==0.5.0
 yahoo-finance==1.4.0
+llama-index-tools-neo4j==0.2.0
 openinference-instrumentation-llama-index==3.0.2
 arize-phoenix==4.35.1
 arize-phoenix-otel==0.5.1
