--- a/.pylintrc
+++ b/.pylintrc
@@ -14,6 +14,6 @@ disable =
     dangerous-default-value, 
     too-many-return-statements, 
     import-outside-toplevel, 
-    eval-used
-
+    eval-used,
+    too-few-public-methods
 
