--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ llama-index-tools-database==0.2.0
 llama-index-tools-google==0.2.0
 llama-index-tools-tavily_research==0.2.0
 llama-index-tools-neo4j==0.2.0
+llama-index-tools-slack==0.2.0
 tavily-python==0.5.0
 yahoo-finance==1.4.0
 openinference-instrumentation-llama-index==3.0.2
