Improvements to create_rag_tool (#38)
* initial

* updates

* updated models

* upgrade llama_index version to include "verbose"
added LATS agent type
Update to readme

* update reqs

* updates after Justin feedback

* bugfix

* added EXA.ai tool

* LlamaIndex version bump

* updates to make LLMCompiler and LATS work properly with the right instructions
updates to db_tools

* minor update to prompt

* removed DEBUG msgs

* Add Validity Check for Prefix

* Remove Debug Print Outs

* updates to LATS

---------

Co-authored-by: david-oplatka <david.oplatka@genesis.com>

--- a/.pylintrc
+++ b/.pylintrc
@@ -16,5 +16,7 @@ disable =
     import-outside-toplevel, 
     eval-used,
     too-few-public-methods,
-    unused-argument
+    unused-argument,
+    too-many-locals,
+    too-many-statements,
 
